Added support to show some unicode (utf8) characters on menu
Added Basic viewer for .bas basic files (plain ascii or Basic Spectrum data with tokens), .baszx80 (Basic ZX80 with tokens), .baszx81 (Basic ZX81 with tokens), Z88 basic files with tokens
Added ZXUno DMA emulation
Added TBBlue/DataGear/MB02 DMA emulation
Added Beeper Piano Menu
Added new Z80 TBBlue opcodes and deleted obsolete ones
Added setting to change Kempston Mouse sentitivity

Improved debugger:
*Added bitwise operators AND (&), OR (|), XOR (^) when using registers breakpoints/watches
*New pseudo variables:
**OUTFIRED: returns 1 if last Z80 opcode was an OUT operation
**INFIRED: returns 1 if last Z80 opcode was an IN operation
**INTFIRED: returns 1 when an interrupt has been generated
* breakpoints actions do not reset keyboard 

Improved menu: 
* menu windows: now can have more lines than 22, doing scroll
* now you can write any ascii character on the menu
* now you can use binary numbers on expressions
* you can now scroll with mouse on windows with text contents and file selector menus, by clicking the right progress symbol (*)
* now you can move cursor up/down with mouse on windows with text contents and file selector by clicking new arrow buttons
* new file expander on file selector menu, using space key, for the following file types : .tap, .tzx, .dsk, .trd, .mdf, .hdf, .P, .O, Z88 Cards (.epr, .eprom, .flash)

Fixed autoload tape on TBBlue
Fixed bug when smartload and selecting an unknown file type: if you cancel it, the inserted tape was modified
Fixed bug reading extension on files with no extension
Fixed bug reading AY registers: unused bits for registers are set to 0

Fixed bugs on esxdos handler:
*readdir call was incrementing PC register when there was no more files
*added ESXDOS_MODE_CREAT_TRUNC mode when opening files
*BCDE was not returning from a f_seek call

Updated to the last Next SD image

Some other minor bugfixes and improvements



Version 7.0. 25 May 2018 - Xeno edition
